# highest_above_nearest_drainage

./: .env  .gitignore  Cargo.toml  readme.ipynb  readme.md
accumulations/: cells.json.REMOVED.git-id  cells_mid.json  cells_mini.json  closest_neighbor.json  closest_neighbor.json.REMOVED.git-id  hand.npy  hand.npy.REMOVED.git-id
src/: main.rs  old.txt
