[package]
name = "hand_calculate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false


[dependencies]
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
indexmap = {version ="2.0.0", features = ["serde"]}
indicatif = "0.17.5"
log = "0.4.0"
env_logger = "0.10.0"